<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android2="http://schemas.android.com/apk/res/android"
    xmlns:android="https://schemas.android.com/apk/res/android">
    <PreferenceCategory android2:title="Ambient Temperature">
        <ListPreference
            android2:entries="@array/temperature_units"
            android2:entryValues="@array/temperature_units_values"
            android2:key="@string/temperature_measurement"
            android2:title="@string/temperature_measurement2" />

    </PreferenceCategory>

        />
    <PreferenceCategory android2:title="Accelerometer ">
        <ListPreference
            android2:defaultValue="true"
            android2:entries="@array/speed_units"
            android2:entryValues="@array/speed_units_values"
            android2:key="list_preference_1"
            android2:title="@string/speed_measurement" />
    </PreferenceCategory>
</PreferenceScreen>