<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/drawable_gradient_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/ram_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/ram_sensor"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ram_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/phone_temp_sensor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ram_sensor"
        app:srcCompat="@drawable/ram_icon_2" />

    <TextView
        android:id="@+id/ram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/ram"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/ram_logo"
        app:layout_constraintStart_toStartOf="@+id/ram_logo"
        app:layout_constraintTop_toBottomOf="@+id/ram_sensor" />

    <TextView
        android:id="@+id/current_ram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/MB"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ram_logo"
        app:layout_constraintEnd_toEndOf="@+id/ram_logo"
        app:layout_constraintStart_toStartOf="@+id/ram_logo"
        app:layout_constraintTop_toBottomOf="@+id/ram" />
</android.support.constraint.ConstraintLayout>