<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:fillViewport="true"
    tools:context="com.christianfoulcard.android.androidsensorengine.sensors.SensorRamActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/ram_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/ram_sensor"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:onClick="showRamDialogPopup"
        app:layout_constraintStart_toEndOf="@+id/ram_sensor"
        app:layout_constraintTop_toTopOf="@+id/ram_sensor"
        app:srcCompat="@drawable/ic_question" />

    <ImageView
        android:id="@+id/ram_logo"
        style="@style/MaterialAnimations"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/phone_temp_sensor"
        android:transitionName="@string/ram_anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ram_sensor"
        app:srcCompat="@drawable/ic_ram_icon_2" />

        <TextView
            android:id="@+id/ram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/anton_regular"
            android:text="@string/ram"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/ram_logo"
            app:layout_constraintStart_toStartOf="@+id/ram_logo"
            app:layout_constraintTop_toBottomOf="@+id/ram_sensor" />

        <TextView
            android:id="@+id/current_ram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/anton_regular"
            android:text="@string/not_available"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/ram_logo"
            app:layout_constraintEnd_toEndOf="@+id/ram_logo"
            app:layout_constraintStart_toStartOf="@+id/ram_logo"
            app:layout_constraintTop_toBottomOf="@+id/ram" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>