<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/drawable_gradient_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sound_logo2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/sound_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lux_sensor"
        app:srcCompat="@drawable/light_icon" />

    <TextView
        android:id="@+id/lux_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/lux_sensor"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/luminosity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/luminosity"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/sound_logo2"
        app:layout_constraintStart_toStartOf="@+id/sound_logo2"
        app:layout_constraintTop_toBottomOf="@+id/lux_sensor" />

    <TextView
        android:id="@+id/current_lumens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/anton_regular"
        android:text="@string/lumens"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/sound_logo2"
        app:layout_constraintEnd_toEndOf="@+id/sound_logo2"
        app:layout_constraintStart_toStartOf="@+id/sound_logo2"
        app:layout_constraintTop_toBottomOf="@+id/luminosity" />
</android.support.constraint.ConstraintLayout>